fix: develop 코드와 다른부분 수정